# bookmark

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
context/: spec.md  user-acceptance-tests.md
src/bookmark/: __init__.py  bookmark_creator.py  bookmark_launcher.py  cli.py  file_manager.py  fzf_interface.py  models.py
tests/: __init__.py  conftest.py  test_file_manager.py  test_integration.py  test_models.py
